@@ -1169,6 +1169,18 @@ Copt::memoryPick();
 			$passwd = $user['password'];
 			$auth_type = $user['auth_type'];
 
+			if ($auth_type == ZBX_AUTH_HTTP) {
+				// if PHP_AUTH_USER is not set, it means that HTTP authentication is not enabled
+				if (!isset($_SERVER['PHP_AUTH_USER'])) {
+					throw new APIException(ZBX_API_ERROR_INTERNAL, S_CUSER_ERROR_CANNOT_LOGIN);
+				}
+				// check if the user name used when calling the API matches the one used for HTTP authentication
+				elseif ($name !== $_SERVER['PHP_AUTH_USER']) {
+					throw new APIException(ZBX_API_ERROR_INTERNAL, S_CUSER_ERROR_USER_DOES_NOT_MATCH_HTTP_LOGIN);
+				}
+
+			}
+
 			$password = md5($passwd);
 
 			$sql = 'SELECT u.userid,u.attempt_failed, u.attempt_clock, u.attempt_ip '.
